--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "socket.io": "^4.7.2",
-    "redis": "^4.6.7",
+    "ioredis": "^5.6.0",
     "amqplib": "^0.10.3"
   },
   "devDependencies": {
